[gd_scene load_steps=2 format=1]

[ext_resource path="res://addons/atlas_importer/importer.gd" type="Script" id=1]

[node name="Node2D" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="Dialog" type="ConfirmationDialog" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 132.5
margin/top = 69.5
margin/right = 891.5
margin/bottom = 530.5
popup/exclusive = false
window/title = "Import 2D Atlas"
dialog/hide_on_ok = false

[node name="Input" type="VBoxContainer" parent="Dialog"]

anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 26.0
margin/right = 425.0
margin/bottom = 86.0
custom_constants/separation = 10
alignment = 0

[node name="Source" type="Control" parent="Dialog/Input"]

editor/display_folded = true
rect/min_size = Vector2( 0, 45 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 425.0
margin/bottom = 45.0

[node name="Label" type="Label" parent="Dialog/Input/Source"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = -6.0
margin/right = 7.0
margin/bottom = 21.0
text = "Source meta file"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MetaFileField" type="LineEdit" parent="Dialog/Input/Source"]

anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 5.5
margin/right = 53.0
margin/bottom = -25.5
placeholder/alpha = 0.6
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Browse" type="Button" parent="Dialog/Input/Source"]

anchor/left = 1
anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 49.0
margin/top = 5.5
margin/right = 1.0
margin/bottom = -25.5
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "..."
flat = false

[node name="Target" type="Control" parent="Dialog/Input"]

editor/display_folded = true
rect/min_size = Vector2( 0, 45 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 55.0
margin/right = 425.0
margin/bottom = 100.0

[node name="Label" type="Label" parent="Dialog/Input/Target"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = -6.0
margin/right = 7.0
margin/bottom = 21.0
text = "Target texture file"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TargetDirField" type="LineEdit" parent="Dialog/Input/Target"]

anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 5.5
margin/right = 53.0
margin/bottom = -25.5
placeholder/alpha = 0.6
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Browse" type="Button" parent="Dialog/Input/Target"]

anchor/left = 1
anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 49.0
margin/top = 5.5
margin/right = 1.0
margin/bottom = -25.5
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "..."
flat = false

[node name="Type" type="Control" parent="Dialog/Input"]

editor/display_folded = true
rect/min_size = Vector2( 0, 45 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 110.0
margin/right = 425.0
margin/bottom = 155.0

[node name="Label" type="Label" parent="Dialog/Input/Type"]

anchor/top = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 15.0
margin/right = 168.0
margin/bottom = -12.0
text = "Atlas generator"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TypeButton" type="OptionButton" parent="Dialog/Input/Type"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 175.0
margin/top = 5.0
margin/right = 1.0
margin/bottom = 33.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Attila"
flat = false
align = 0
selected = 0
items = [ "Attila", null, false, 2, null, "TexturePacker - Generic XML", null, false, 0, null, "TexturePacker - JSON HASH", null, false, 1, null, "Kenney Spritesheet", null, false, 3, null ]

[node name="Compress" type="Control" parent="Dialog/Input"]

rect/min_size = Vector2( 0, 45 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 165.0
margin/right = 425.0
margin/bottom = 210.0

[node name="Label" type="Label" parent="Dialog/Input/Compress"]

anchor/top = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 15.0
margin/right = 168.0
margin/bottom = -12.0
text = "Storage"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TypeButton" type="OptionButton" parent="Dialog/Input/Compress"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 175.0
margin/top = 5.0
margin/right = 1.0
margin/bottom = 33.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Uncompress"
flat = false
align = 0
selected = 0
items = [ "Uncompress", null, false, 0, null, "Compres Lossy", null, false, 1, null, "Compress Lossless", null, false, 2, null ]

[node name="Quality" type="HBoxContainer" parent="Dialog/Input/Compress"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 40.0
margin/right = 10.0
margin/bottom = 80.0
custom_constants/separation = 10
alignment = 0

[node name="Label2" type="Label" parent="Dialog/Input/Compress/Quality"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 13.0
margin/right = 46.0
margin/bottom = 27.0
text = "Quality"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Slider" type="HSlider" parent="Dialog/Input/Compress/Quality"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 56.0
margin/top = 12.0
margin/right = 375.0
margin/bottom = 28.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Value" type="Label" parent="Dialog/Input/Compress/Quality"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 385.0
margin/top = 13.0
margin/right = 405.0
margin/bottom = 27.0
text = "1.0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Status" type="Label" parent="Dialog"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 19.0
margin/top = 69.0
margin/right = 15.0
margin/bottom = 42.0
custom_colors/font_color = Color( 0.878906, 0.374383, 0.291824, 1 )
custom_colors/font_color_shadow = Color( 0.109375, 0.078186, 0.078186, 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Preview" type="Control" parent="Dialog"]

editor/display_folded = true
anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 306.0
margin/top = 8.0
margin/right = 15.0
margin/bottom = 90.0

[node name="Label" type="Label" parent="Dialog/Preview"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -31.0
margin/top = 14.0
margin/right = 232.0
margin/bottom = 37.0
text = "Preview"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Background" type="Panel" parent="Dialog/Preview"]

rect/min_size = Vector2( 300, 300 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = -10.0
margin/top = 46.0
margin/right = 290.0
margin/bottom = 366.0
__meta__ = { "_edit_group_":true }

[node name="ScrollContainer" type="ScrollContainer" parent="Dialog/Preview/Background"]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 290, 320 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -11.0
margin/bottom = 0.0
scroll/horizontal = false
scroll/vertical = true

[node name="VBox" type="VBoxContainer" parent="Dialog/Preview/Background/ScrollContainer"]

rect/min_size = Vector2( 280, 300 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 311.0
margin/bottom = 300.0
alignment = 0

[node name="Alter" type="AcceptDialog" parent="Dialog"]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 205.5
margin/top = 65.5
margin/right = -249.5
margin/bottom = -10.5
popup/exclusive = false
window/title = "Alert!"
dialog/hide_on_ok = true


